@startuml

package entity{

    abstract Entity{
        - position: Position
        - hp: int
        - passThrought: boolean
        - reward: int
        + getPosition():(int, int, Cmd)
        + setPosition(int direction)
        + setPosition(int x, int y)
        + canPassThrought(): boolean
        + {abstract} draw()
        + behave(maze: Maze, Cmd direction): Direction
        + getReward(): int
        + attack(maze: Maze)
        + takeDamage(dmg: int)
        + isAlive(): boolean
        + isHero(): boolean
        + getDmg(): int
    }

    class Hero {
        - score: int
        + increaseScore(bonus: int)
        + getScore(): int
        + isHero(): boolean
        + draw()
    }

    class Monster{
        + draw()
        + isHero(): boolean
    }

    package behavior{

        class Behavior{

        }

        note left: Class diagram of behavior

    }

    class EntityFactory(){
        + generateHero(): Entity
        + getHero(): Entity
        + getRandomMonster(position: Position): Entity
    }

    note left: EntityFactory is controlling the creation of Hero.\nThere must be only one.

}



Hero --|> Entity
Monster --|> Entity
Entity --> "1" Behavior: - behavior

@enduml